@@ -4,3 +4,4 @@ pornroom - new domain
 netflixporno - fix listing
 chaturbate - fix listing
 chaturbate - added search (Look for Online Models)
+sxyprn - Fix playback issues on direct links
